--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "^4.0.3",
     "react-toastify": "^9.0.0",
+    "recharts": "^2.10.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
