--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "date-fns": "^2.30.0",
     "dotenv": "^16.3.1",
+    "moment": "^2.30.1",
     "mqtt": "^4.3.7",
     "react": "^18.2.0",
+    "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
     "react-router-dom": "^6.20.1",
